<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondojuego">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/imgView"
            app:srcCompat="@drawable/logogamer" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:fontFamily="@font/comic"
            android:textStyle="bold"
            android:textSize="50sp"
            android:textColor="@color/secondary"
            android:text="@string/tvTitulo" />

        <TextView
            android:id="@+id/tvMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:fontFamily="@font/comic"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/tvMensaje" />

        <TextView
            android:id="@+id/tvBienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:fontFamily="@font/robotoblack"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/tvBienvenida" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="70dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/robotoblack"
            android:padding="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/btnIngresar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>