<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/imgLogo"
            app:srcCompat="@drawable/logogamer" />

        <TextView
            android:id="@+id/tvTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/robotoblack"
            android:text="@string/tvTittle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="10"
            android:background="@drawable/edttext"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/toasty"
            android:hint="@string/edtName"
            android:inputType="text"
            android:padding="15dp"
            android:textColorHint="@color/colorGray"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="10"
            android:background="@drawable/edttext"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/toasty"
            android:hint="@string/edtPhone"
            android:inputType="phone"
            android:padding="15dp"
            android:textColorHint="@color/colorGray"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="10"
            android:background="@drawable/edttext"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/toasty"
            android:hint="@string/edtMail"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColorHint="@color/colorGray"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="10"
            android:background="@drawable/edttext"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/toasty"
            android:hint="@string/edtPassword"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="@color/colorGray"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:buttonTint="@color/primary"
            android:textAlignment="center"
            android:fontFamily="@font/robotoblack"
            android:textColor="@color/white"
            android:text="@string/checkbox"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/robotoblack"
            android:padding="12dp"
            android:text="@string/btnNext"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvHave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/robotoblack"
            android:textColor="@color/white"
            android:text="@string/tvHave"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>