<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:contex=".InicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvInicio"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textAlignment="textStart"
                android:fontFamily="@font/comic"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/imgTortuga"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/imgTortuga"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/tortuga" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardjuegos"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            app:cardCornerRadius="30dp"
            app:cardBackgroundColor="@color/primary"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="12dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/juegoic"
                    android:contentDescription="@string/icono_de_juegos" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="26dp"
                    android:text="@string/ver_juegos"
                    android:textColor="@color/white"
                    android:fontFamily="@font/toasty"
                    android:textStyle="bold"
                    android:textSize="20sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardgenero"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            app:cardCornerRadius="30dp"
            app:cardBackgroundColor="@color/colorGray"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="12dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/genero"
                    android:contentDescription="@string/icono_por_g_nero" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:text="@string/juegos_por_g_nero"
                    android:textColor="@color/white"
                    android:fontFamily="@font/toasty"
                    android:textStyle="bold"
                    android:textSize="20sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardagregar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            app:cardCornerRadius="30dp"
            app:cardBackgroundColor="@color/secondary"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="12dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/nuevo"
                    android:contentDescription="@string/icono_agregar_juego" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="26dp"
                    android:text="@string/agregar_juego"
                    android:textColor="@color/white"
                    android:fontFamily="@font/toasty"
                    android:textStyle="bold"
                    android:textSize="20sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="65dp"
        android:background="@color/secondary"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/nav_header" />

</androidx.drawerlayout.widget.DrawerLayout>