<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:contex=".AgregarJuegoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvInicio"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textAlignment="textStart"
                android:fontFamily="@font/comic"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_titulo_principal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_titulo_principal"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:fontFamily="@font/comic"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_descripcion"
                android:textSize="16sp"
                android:fontFamily="@font/robotoblack"
                android:textColor="@color/textSecondary"
                android:gravity="center" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    style="@style/CardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:fontFamily="@font/robotoblack"
                            android:text="@string/info_juego"
                            android:textColor="@color/secondary"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp">

                            <EditText
                                android:id="@+id/et_nombre"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autofillHints="1"
                                android:fontFamily="@font/robotoblack"
                                android:hint="@string/hint_nombre"
                                android:inputType="textPersonName|textCapWords" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp">

                            <AutoCompleteTextView
                                android:id="@+id/autoGenero"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableEnd="@drawable/arrow_down"
                                android:fontFamily="@font/robotoblack"
                                android:hint="@string/hint_genero" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp">

                            <EditText
                                android:id="@+id/et_anho"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autofillHints="1"
                                android:fontFamily="@font/robotoblack"
                                android:hint="@string/hint_anho"
                                android:inputType="number" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp">

                            <AutoCompleteTextView
                                android:id="@+id/autoPlataforma"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableEnd="@drawable/arrow_down"
                                android:fontFamily="@font/robotoblack"
                                android:hint="@string/hint_plataforma" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp">

                            <EditText
                                android:id="@+id/et_descripcion"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autofillHints="1"
                                android:fontFamily="@font/robotoblack"
                                android:gravity="top"
                                android:hint="@string/hint_descripcion"
                                android:inputType="textMultiLine"
                                android:lines="4" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/CardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:fontFamily="@font/robotoblack"
                            android:text="@string/cal_juego"
                            android:textColor="@color/secondary"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp">

                            <EditText
                                android:id="@+id/et_calificacion"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autofillHints="1"
                                android:fontFamily="@font/robotoblack"
                                android:hint="@string/hint_calificacion"
                                android:inputType="numberDecimal" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp">

                            <EditText
                                android:id="@+id/et_resena"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autofillHints="1"
                                android:fontFamily="@font/robotoblack"
                                android:gravity="top"
                                android:hint="@string/hint_resena"
                                android:inputType="textMultiLine"
                                android:lines="4" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    style="@style/CardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:fontFamily="@font/robotoblack"
                            android:text="@string/img_juego"
                            android:textColor="@color/secondary"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/imageButton"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/camara"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/imgNueva"
                            android:background="@drawable/edt_img"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnGuardar"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotoblack"
                    android:backgroundTint="@color/primary"/>

                <ImageView
                    android:id="@+id/img5"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/img5"
                    app:srcCompat="@drawable/deadpool" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="65dp"
        android:background="@color/secondary"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/nav_header" />

</androidx.drawerlayout.widget.DrawerLayout>